--- a/spring-simple/src/main/resources/application.properties
+++ b/spring-simple/src/main/resources/application.properties
@@ -1,2 +1,17 @@
 # ?????????
 scanPackage=com.xc.joy.spring.demo
+
+templateRoot=layouts
+
+# ?????expression#
+pointCut=public .* com.xc.joy.demo.service..*Service..*(.*)
+# ???
+aspectClass=com.xc.joy.demo.aspect.LogAspect
+# ????????
+aspectBefore=before
+# ????????
+aspectAfter=after
+# ????????
+aspectAfterThrow=afterThrowing
+# ??????
+aspectAfterThrowingName=java.lang.Exception
