--- a/spring-simple/src/main/resources/application.properties
+++ b/spring-simple/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-# ?????????
+# \u6258\u7BA1\u7684\u7C7B\u626B\u63CF\u5305\u8DEF\u5F84#
 scanPackage=com.xc.joy.spring.demo
 
 templateRoot=layouts
 
-# ?????expression#
-pointCut=public .* com.xc.joy.demo.service..*Service..*(.*)
-# ???
-aspectClass=com.xc.joy.demo.aspect.LogAspect
-# ????????
+# \u5207\u9762\u8868\u8FBE\u5F0F expression#
+pointCut=public .* com.xc.joy.service..*Service..*(.*)
+# \u5207\u9762\u7C7B
+aspectClass=com.xc.joy.aspect.LogAspect
+# \u524D\u7F6E\u901A\u77E5\u56DE\u8C03\u65B9\u6CD5
 aspectBefore=before
-# ????????
+# \u540E\u7F6E\u901A\u77E5\u56DE\u8C03\u65B9\u6CD5
 aspectAfter=after
-# ????????
+# \u5F02\u5E38\u901A\u77E5\u56DE\u8C03\u65B9\u6CD5
 aspectAfterThrow=afterThrowing
-# ??????
+# \u5F02\u5E38\u7C7B\u578B\u6355\u83B7
 aspectAfterThrowingName=java.lang.Exception
