--- a/springmvc-simple/src/main/webapp/WEB-INF/web.xml
+++ b/springmvc-simple/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
          version="2.4">
-    <display-name>Gupao Web Application</display-name>
+    <display-name>EchoJoy Web Application</display-name>
     <servlet>
         <servlet-name>joyDispatcherServlet</servlet-name>
         <servlet-class>com.xc.joy.mvcframework.servlet.v3.JoyDispatcherServlet</servlet-class>
