--- a/spring-orm/pom.xml
+++ b/spring-orm/pom.xml
@@ -126,7 +126,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.14</version>
+            <version>8.0.11</version>
         </dependency>
         <!-- jdbc driver end -->
 
@@ -154,7 +154,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.0.9</version>
+            <version>1.1.12</version>
         </dependency>
 
         <!-- third passport required end -->
@@ -325,11 +325,11 @@
                 </executions>
                 <version>1.0.5</version>
             </plugin>
-            <plugin>
+            <!--<plugin>
                 <groupId>net.sf.ehcache</groupId>
                 <artifactId>ehcache-core</artifactId>
                 <version>2.6.8</version>
-            </plugin>
+            </plugin>-->
 
 
         </plugins>
