--- a/spring-orm/src/main/resources/db.properties
+++ b/spring-orm/src/main/resources/db.properties
@@ -1,17 +1,8 @@
 #sysbase database mysql config
-#mysql.jdbc.driverClassName=com.mysql.jdbc.Driver
-#mysql.jdbc.url=jdbc:mysql://127.0.0.1:3306/gp-vip-spring-db-demo?characterEncoding=UTF-8&rewriteBatchedStatements=true
-#mysql.jdbc.username=root
-#mysql.jdbc.password=123456
-
-db2019.mysql.jdbc.driverClassName=com.mysql.jdbc.Driver
-db2019.mysql.jdbc.url=jdbc:mysql://127.0.0.1:3306/echo_joy?characterEncoding=UTF-8&rewriteBatchedStatements=true
-db2019.mysql.jdbc.username=root
-db2019.mysql.jdbc.password=123456
-db2020.mysql.jdbc.driverClassName=com.mysql.jdbc.Driver
-db2020.mysql.jdbc.url=jdbc:mysql://127.0.0.1:3306/echo_joy?characterEncoding=UTF-8&rewriteBatchedStatements=true
-db2020.mysql.jdbc.username=root
-db2020.mysql.jdbc.password=123456
+mysql.jdbc.driverClassName=com.mysql.jdbc.Driver
+mysql.jdbc.url=jdbc:mysql://127.0.0.1:3306/echo_joy?characterEncoding=UTF-8&rewriteBatchedStatements=true&serverTimezone=GMT%2B8
+mysql.jdbc.username=root
+mysql.jdbc.password=123456
 
 #alibaba druid config
 dbPool.initialSize=1
@@ -27,11 +18,3 @@ dbPool.testOnReturn=false
 dbPool.poolPreparedStatements=false
 dbPool.maxPoolPreparedStatementPerConnectionSize=20
 dbPool.filters=stat,log4j,wall
-
-# tx
-#sysbase database mysql config
-
-mysql.jdbc.driverClassName=com.mysql.jdbc.Driver
-mysql.jdbc.url=jdbc:mysql://127.0.0.1:3306/echo_joy?characterEncoding=UTF-8&rewriteBatchedStatements=true
-mysql.jdbc.username=root
-mysql.jdbc.password=123456
