--- a/spring-orm/src/main/resources/db.properties
+++ b/spring-orm/src/main/resources/db.properties
@@ -2,7 +2,17 @@
 mysql.jdbc.driverClassName=com.mysql.jdbc.Driver
 mysql.jdbc.url=jdbc:mysql://127.0.0.1:3306/echo_joy?characterEncoding=UTF-8&rewriteBatchedStatements=true&serverTimezone=GMT%2B8
 mysql.jdbc.username=root
-mysql.jdbc.password=lxcecho00O.
+mysql.jdbc.password=123456
+
+db2022.mysql.jdbc.driverClassName=com.mysql.jdbc.Driver
+db2022.mysql.jdbc.url=jdbc:mysql://127.0.0.1:3306/echo_joy?characterEncoding=UTF-8&rewriteBatchedStatements=true&serverTimezone=GMT%2B8
+db2022.mysql.jdbc.username=root
+db2022.mysql.jdbc.password=123456
+
+db2020.mysql.jdbc.driverClassName=com.mysql.jdbc.Driver
+db2020.mysql.jdbc.url=jdbc:mysql://127.0.0.1:3306/echo_joy?characterEncoding=UTF-8&rewriteBatchedStatements=true&serverTimezone=GMT%2B8
+db2020.mysql.jdbc.username=root
+db2020.mysql.jdbc.password=123456
 
 #alibaba druid config
 dbPool.initialSize=1
